unpackaged/main/default/objects/User/fields/ACG_Region__c.field-meta.xml
<CustomField>
    <fullName>ACG_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>ACG</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>