unpackaged/main/default/objects/User/fields/Appointment_Assistant_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Assistant_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Assistant Pilot</label>
    <type>Checkbox</type>
</CustomField>