unpackaged/main/default/objects/User/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <label>Branch #</label>
    <length>4</length>
    <type>Text</type>
</CustomField>