unpackaged/main/default/objects/User/fields/Bypass_Tests__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Tests?</label>
    <type>Checkbox</type>
</CustomField>