unpackaged/main/default/objects/User/fields/FSL_Glympse_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>FSL_Glympse_Last_Login__c</fullName>
    <label>Glympse Last Login</label>
    <type>DateTime</type>
</CustomField>