unpackaged/main/default/objects/User/fields/FSL_Logged_into_Glympse__c.field-meta.xml
<CustomField>
    <fullName>FSL_Logged_into_Glympse__c</fullName>
    <formula>IF(
         NOT(ISNULL(FSL_Glympse_Last_Login__c)), 
         IF( MOD( (NOW() - FSL_Glympse_Last_Login__c) * 24, 24 ) &gt; $Setup.FSL_Optimization_Settings__c.Glympse_Login_Threshold__c , FALSE, TRUE
            ),
         FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged into Glympse</label>
    <type>Checkbox</type>
</CustomField>