unpackaged/main/default/objects/User/fields/FSL_Prompted_To_Login_Glympse__c.field-meta.xml
<CustomField>
    <fullName>FSL_Prompted_To_Login_Glympse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prompted To Login Glympse</label>
    <type>Checkbox</type>
</CustomField>