unpackaged/main/default/objects/User/fields/Glympse_Token__c.field-meta.xml
<CustomField>
    <fullName>Glympse_Token__c</fullName>
    <label>Glympse Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>