unpackaged/main/default/objects/User/fields/Lead_Driver__c.field-meta.xml
<CustomField>
    <fullName>Lead_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Driver</label>
    <type>Checkbox</type>
</CustomField>