unpackaged/main/default/objects/User/fields/Truck_Number__c.field-meta.xml
<CustomField>
    <fullName>Truck_Number__c</fullName>
    <label>Truck Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>