unpackaged/main/default/objects/User/validationRules/No_User_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>No_User_Changes</fullName>
    <active>true</active>
    <description>Prevent users from changing fields</description>
    <errorConditionFormula>AND(
	OR(
		ISCHANGED(FirstName),
		ISCHANGED(LastName),
		ISCHANGED(Alias),
		ISCHANGED(CommunityNickname),
		ISCHANGED(Lead_Driver__c),
		ISCHANGED(UserRoleId)
	),
	NOT(CONTAINS($Profile.Name,&quot;Admin&quot;))
)</errorConditionFormula>
    <errorMessage>Please contact your administrator to make changes to your account.</errorMessage>
</ValidationRule>