unpackaged/main/default/objects/User/listViews/AAA_Dispatchers.listView-meta.xml
<ListView>
    <fullName>AAA_Dispatchers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>FSL Club Dispatcher,FSL Dispatch Supervisor</value>
    </filters>
    <filters>
        <field>CORE.USERS.IS_PARTNER</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>AAA Dispatchers</label>
    <language>en_US</language>
</ListView>