unpackaged/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>FSL Delegated Club Administrator</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Users</label>
</ListView>