unpackaged/main/default/objects/User/listViews/Contractor_Dispatchers.listView-meta.xml
<ListView>
    <fullName>Contractor_Dispatchers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.IS_PARTNER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>FSL Contractor Dispatcher Access</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contractor Dispatchers</label>
    <language>en_US</language>
</ListView>