unpackaged/main/default/objects/User/listViews/Contractor_Lead.listView-meta.xml
<ListView>
    <fullName>Contractor_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Lead_Driver__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.IS_PARTNER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Lead Technician</value>
    </filters>
    <label>Contractor Lead Technician</label>
    <language>en_US</language>
</ListView>