unpackaged/main/default/objects/User/listViews/Contractor_technician.listView-meta.xml
<ListView>
    <fullName>Contractor_technician</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.IS_PARTNER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>contractor technician access</value>
    </filters>
    <label>Contractor - Technician</label>
    <language>en_US</language>
</ListView>