unpackaged/main/default/objects/User/listViews/EC_Users.listView-meta.xml
<ListView>
    <fullName>EC_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>aaamiss</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notContain</operation>
        <value>partner</value>
    </filters>
    <label>By Club Users</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>