unpackaged/main/default/objects/User/listViews/External_Operations.listView-meta.xml
<ListView>
    <fullName>External_Operations</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>externaloperations@aaanortheast.com</value>
    </filters>
    <label>External Operations</label>
    <language>en_US</language>
</ListView>