unpackaged/main/default/objects/User/listViews/FindUsers.listView-meta.xml
<ListView>
    <fullName>FindUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>ERS Advocate</value>
    </filters>
    <label>Find Users</label>
    <language>en_US</language>
</ListView>