unpackaged/main/default/objects/User/listViews/Inclement_Weather.listView-meta.xml
<ListView>
    <fullName>Inclement_Weather</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>inclement</value>
    </filters>
    <label>Inclement Weather</label>
</ListView>