unpackaged/main/default/objects/User/listViews/National_and_Infosys.listView-meta.xml
<ListView>
    <fullName>National_and_Infosys</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>infosys</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>national</value>
    </filters>
    <label>National and Infosys</label>
</ListView>