unpackaged/main/default/objects/User/listViews/Not_in_30_Days.listView-meta.xml
<ListView>
    <fullName>Not_in_30_Days</fullName>
    <booleanFilter>(1 or 4) and 2 and 3 and 5 and 6</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>notEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>System Administrator,Facility Reporting</value>
    </filters>
    <label>Not in 30 Days</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>