unpackaged/main/default/objects/User/listViews/NY_Fleet_Technicians.listView-meta.xml
<ListView>
    <fullName>NY_Fleet_Technicians</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>NY Fleet Technicians</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NY Fleet Technicians</label>
    <language>en_US</language>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>